Widget design update

--- a/NetCoreCMS.Web/Themes/Default/Shared/Layouts/_FullWidthLayout.cshtml
+++ b/NetCoreCMS.Web/Themes/Default/Shared/Layouts/_FullWidthLayout.cshtml
@@ -82,9 +82,12 @@
                                             <div class='panel-body'>
                                                 @Html.Raw(widget.RenderBody())
                                             </div>
-                                            <div class='panel-footer'>
-                                                @Html.Raw(widget.Footer)
-                                            </div>
+                                            @if (widget.Footer != "")
+                                            {
+                                                <div class='panel-footer'>
+                                                    @Html.Raw(widget.Footer)
+                                                </div>
+                                            }
                                         </div>
                                     }
                                 }
@@ -145,9 +148,12 @@
                                             <div class='panel-body'>
                                                 @Html.Raw(widget.RenderBody())
                                             </div>
-                                            <div class='panel-footer'>
-                                                @Html.Raw(widget.Footer)
-                                            </div>
+                                            @if (widget.Footer != "")
+                                            {
+                                                <div class='panel-footer'>
+                                                    @Html.Raw(widget.Footer)
+                                                </div>
+                                            }
                                         </div>
                                     }
                                 }
@@ -230,9 +236,12 @@
                                             <div class='panel-body'>
                                                 @Html.Raw(widget.RenderBody())
                                             </div>
-                                            <div class='panel-footer'>
-                                                @Html.Raw(widget.Footer)
-                                            </div>
+                                            @if (widget.Footer != "")
+                                            {
+                                                <div class='panel-footer'>
+                                                    @Html.Raw(widget.Footer)
+                                                </div>
+                                            }
                                         </div>
                                     }
                                 }
