--- a/NetCoreCMS.Web/Themes/DefaultDark/Shared/Layouts/_HomeLayout.cshtml
+++ b/NetCoreCMS.Web/Themes/DefaultDark/Shared/Layouts/_HomeLayout.cshtml
@@ -103,9 +103,12 @@
                                             <div class='panel-body'>
                                                 @Html.Raw(widget.RenderBody())
                                             </div>
-                                            <div class='panel-footer'>
-                                                @Html.Raw(widget.Footer)
-                                            </div>
+                                            @if (widget.Footer != "")
+                                            {
+                                                <div class='panel-footer'>
+                                                    @Html.Raw(widget.Footer)
+                                                </div>
+                                            }
                                         </div>
                                     }
                                 }
@@ -162,9 +165,12 @@
                                     <div class='panel-body'>
                                         @Html.Raw(widget.RenderBody())
                                     </div>
-                                    <div class='panel-footer'>
-                                        @Html.Raw(widget.Footer)
-                                    </div>
+                                    @if (widget.Footer != "")
+                                    {
+                                        <div class='panel-footer'>
+                                            @Html.Raw(widget.Footer)
+                                        </div>
+                                    }
                                 </div>
                             }
                         }
@@ -227,9 +233,12 @@
                                         <div class='panel-body'>
                                             @Html.Raw(widget.RenderBody())
                                         </div>
-                                        <div class='panel-footer'>
-                                            @Html.Raw(widget.Footer)
-                                        </div>
+                                        @if (widget.Footer != "")
+                                        {
+                                            <div class='panel-footer'>
+                                                @Html.Raw(widget.Footer)
+                                            </div>
+                                        }
                                     </div>
                                 }
                             }
@@ -291,9 +300,12 @@
                                         <div class='panel-body'>
                                             @Html.Raw(widget.RenderBody())
                                         </div>
-                                        <div class='panel-footer'>
-                                            @Html.Raw(widget.Footer)
-                                        </div>
+                                        @if (widget.Footer != "")
+                                        {
+                                            <div class='panel-footer'>
+                                                @Html.Raw(widget.Footer)
+                                            </div>
+                                        }
                                     </div>
                                 }
                             }
@@ -329,9 +341,12 @@
                                             <div class='panel-body'>
                                                 @Html.Raw(widget.RenderBody())
                                             </div>
-                                            <div class='panel-footer'>
-                                                @Html.Raw(widget.Footer)
-                                            </div>
+                                            @if (widget.Footer != "")
+                                            {
+                                                <div class='panel-footer'>
+                                                    @Html.Raw(widget.Footer)
+                                                </div>
+                                            }
                                         </div>
                                     }
                                 }
@@ -408,9 +423,12 @@
                                             <div class='panel-body'>
                                                 @Html.Raw(widget.RenderBody())
                                             </div>
-                                            <div class='panel-footer'>
-                                                @Html.Raw(widget.Footer)
-                                            </div>
+                                            @if (widget.Footer != "")
+                                            {
+                                                <div class='panel-footer'>
+                                                    @Html.Raw(widget.Footer)
+                                                </div>
+                                            }
                                         </div>
                                     }
                                 }
