--- a/NetCoreCMS.Web/Themes/DefaultDark/Shared/Layouts/_SiteLayout.cshtml
+++ b/NetCoreCMS.Web/Themes/DefaultDark/Shared/Layouts/_SiteLayout.cshtml
@@ -103,9 +103,12 @@
                                             <div class='panel-body'>
                                                 @Html.Raw(widget.RenderBody())
                                             </div>
-                                            <div class='panel-footer'>
-                                                @Html.Raw(widget.Footer)
-                                            </div>
+                                            @if (widget.Footer != "")
+                                            {
+                                                <div class='panel-footer'>
+                                                    @Html.Raw(widget.Footer)
+                                                </div>
+                                            }
                                         </div>
                                     }
                                 }
@@ -192,9 +195,12 @@
                                         <div class='panel-body'>
                                             @Html.Raw(widget.RenderBody())
                                         </div>
-                                        <div class='panel-footer'>
-                                            @Html.Raw(widget.Footer)
-                                        </div>
+                                        @if (widget.Footer != "")
+                                        {
+                                            <div class='panel-footer'>
+                                                @Html.Raw(widget.Footer)
+                                            </div>
+                                        }
                                     </div>
                                 }
                             }
@@ -256,9 +262,12 @@
                                         <div class='panel-body'>
                                             @Html.Raw(widget.RenderBody())
                                         </div>
-                                        <div class='panel-footer'>
-                                            @Html.Raw(widget.Footer)
-                                        </div>
+                                        @if (widget.Footer != "")
+                                        {
+                                            <div class='panel-footer'>
+                                                @Html.Raw(widget.Footer)
+                                            </div>
+                                        }
                                     </div>
                                 }
                             }
@@ -294,9 +303,12 @@
                                             <div class='panel-body'>
                                                 @Html.Raw(widget.RenderBody())
                                             </div>
-                                            <div class='panel-footer'>
-                                                @Html.Raw(widget.Footer)
-                                            </div>
+                                            @if (widget.Footer != "")
+                                            {
+                                                <div class='panel-footer'>
+                                                    @Html.Raw(widget.Footer)
+                                                </div>
+                                            }
                                         </div>
                                     }
                                 }
@@ -379,9 +391,12 @@
                                             <div class='panel-body'>
                                                 @Html.Raw(widget.RenderBody())
                                             </div>
-                                            <div class='panel-footer'>
-                                                @Html.Raw(widget.Footer)
-                                            </div>
+                                            @if (widget.Footer != "")
+                                            {
+                                                <div class='panel-footer'>
+                                                    @Html.Raw(widget.Footer)
+                                                </div>
+                                            }
                                         </div>
                                     }
                                 }
