--- a/NetCoreCMS.Web/Views/Shared/_AdminLoginPartial.cshtml
+++ b/NetCoreCMS.Web/Views/Shared/_AdminLoginPartial.cshtml
@@ -28,6 +28,10 @@
                             <li>
                                 <button type="submit" class="btn btn-link navbar-btn navbar-link" style="padding-left:20px;"><i class="fa fa-sign-out fa-fw"></i> Logout</button>
                             </li>
+                            <li><hr /></li>                            
+                            <li>
+                                <a asp-area="" asp-controller="Home" asp-action="RestartHost" asp-route-returnUrl="/Admin" , asp-route-returnUrlName="Admin" title="Restart Host"><i class="fa fa-refresh fa-fw"></i> Restart Host</a>
+                            </li>
                         </ul>
                         <!-- /.dropdown-user -->
                     </li>
