--- a/NetCoreCMS.Web/Themes/NccSeventeen/Shared/Layouts/Parts/_Header.cshtml
+++ b/NetCoreCMS.Web/Themes/NccSeventeen/Shared/Layouts/Parts/_Header.cshtml
@@ -53,9 +53,12 @@
                                     <div class='panel-body'>
                                         @Html.Raw(widget.RenderBody())
                                     </div>
-                                    <div class='panel-footer'>
-                                        @Html.Raw(widget.Footer)
-                                    </div>
+                                    @if (widget.Footer != "")
+                                    {
+                                        <div class='panel-footer'>
+                                            @Html.Raw(widget.Footer)
+                                        </div>
+                                    }
                                 </div>
                             }
                         }
