--- a/NetCoreCMS.Web/Views/Home/RestartHost.cshtml
+++ b/NetCoreCMS.Web/Views/Home/RestartHost.cshtml
@@ -13,16 +13,35 @@
 <script>
 // Set the date we're counting down to
 var count = 5;
-
 // Update the count down every 1 second
-var x = setInterval(function() {    
-    if (count <= 0) {
-        document.getElementById("showText").innerHTML = "Redirecting to <a href='/' >Home</a>";
-        window.location.replace("/");
+var x = setInterval(function() {
+        if (count <= 0) {
+            document.getElementById("showText").innerHTML = "Redirecting to <a href='@ViewBag.ReturnUrl' >@ViewBag.ReturnUrlName</a>";
+            redirect('@ViewBag.ReturnUrl');
+        }
+        else {
+            document.getElementById("showText").innerText = "Please wait " + count + " second";
+            count--;
+        }
+    }, 1000);
+
+    function redirect(url) {
+        var ua = navigator.userAgent.toLowerCase(),
+            isIE = ua.indexOf('msie') !== -1,
+            version = parseInt(ua.substr(4, 2), 10);
+
+        // Internet Explorer 8 and lower
+        if (isIE && version < 9) {
+            var link = document.createElement('a');
+            link.href = url;
+            document.body.appendChild(link);
+            link.click();
+        }
+
+        // All other browsers can use the standard window.location.href (they don't lose HTTP_REFERER like Internet Explorer 8 & lower does)
+        else {
+            window.location.href = url;
+        }
     }
-    else {
-        document.getElementById("showText").innerText = "Please wait " + count + " second";
-        count--;
-    }
-}, 1000);
+
 </script>
