--- a/NetCoreCMS.Web/Modules/NetCoreCMS.ImageSlider/Views/ImageSliderHome/Manage.cshtml
+++ b/NetCoreCMS.Web/Modules/NetCoreCMS.ImageSlider/Views/ImageSliderHome/Manage.cshtml
@@ -14,7 +14,7 @@
         <div class="panel panel-default">
             <div class="panel-heading">
                 @ViewData["PageSubtitle"]
-                <div class="pull-right"><a asp-controller="NoticeHome" asp-action="CreateEdit" class="btn btn-outline btn-primary btn-xs">Add New</a></div>
+                <div class="pull-right"><a asp-controller="ImageSliderHome" asp-action="CreateEdit" class="btn btn-outline btn-primary btn-xs">Add New</a></div>
             </div>
             <div class="panel-body">
                 <table id="pageListDt" class="table table-striped table-bordered" cellspacing="0" width="100%">
